general: add group and author in GetPostByID
