# docs/swagger.json
@@ -3234,10 +3234,7 @@
                                     "type": "object",
                                     "properties": {
                                         "body": {
-                                            "type": "object",
-                                            "additionalProperties": {
-                                                "$ref": "#/definitions/domain.Post"
-                                            }
+                                            "$ref": "#/definitions/domain.PostWithAuthorAndGroup"
                                         }
                                     }
                                 }
@@ -3312,12 +3309,9 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "array",
-                                "items": {
-                                    "$ref": "#/definitions/domain.Comment"
-                                }
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/domain.CommentWithAuthor"
                             }
                         }
                     },
